syntax = "proto3";

package proto;

option go_package = "/proto";

service LoadBalancerService {
    rpc ProcessRequest(Request) returns (Response);
    rpc GetLoad(LoadRequest) returns (LoadResponse);
}

message Request {
    int32 work_id = 1;
}

message Response {
    string result = 1;
}

message LoadRequest {}

message LoadResponse {
    int32 load = 1;
}